# scout

./: .gitignore  README.md  pyproject.toml  start.sh
config/: agents.md  config.yaml.example  skills.yaml  tools.yaml
config/tasks/: sample_arxiv_papers.md  sample_tech_stocks.md
docs/: history.md  project_planning.md  reconstruction_guide.md  technical_design.md
scripts/: sync_db.py
src/: main_collect.py  main_web.py
src/api/: routes.py
src/core/: agent_executor.py  arxiv_collector.py  base_collector.py  config_agent.py  jobs.py  llm_summarizer.py  publisher.py  state_manager.py  stock_collector.py  task_manager.py
src/core/skills/: base_skill.py  paper_research_skill.py  skill_registry.py  x_collection_skill.py
src/core/tools/: base_tool.py  media_tool.py  pdf_tool.py  rss_tool.py  search_tool.py  storage_tool.py  summary_tool.py  web_crawler_tool.py
src/templates/: daily_report.md.j2
src/web/templates/: base.html  config.html  index.html  reports.html
tests/core/: test_agent_executor.py  test_x_archiving.py
tests/skills/: test_skills.py
tests/task/: test_fetch_x_posts.py
tests/tools/: test_tools.py
